[gd_scene load_steps=6 format=3 uid="uid://c8nr2kud8vu1c"]

[ext_resource type="Script" path="res://game/scripts_general/classes/projectiles/laser_projectile.gd" id="1_72x83"]
[ext_resource type="Texture2D" uid="uid://v2p6rxg7ipb4" path="res://game/scripts_general/classes/projectiles/projectiles.png" id="2_vnka4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_53tg1"]
atlas = ExtResource("2_vnka4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bx3xr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53tg1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hnrxd"]
size = Vector2(24, 11)

[node name="laser_projectile" type="Node2D" node_paths=PackedStringArray("timer")]
script = ExtResource("1_72x83")
timer = NodePath("lifetime_timer")
damage = 1

[node name="laser_spr" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bx3xr")

[node name="laser_hitbox" type="Area2D" parent="."]
collision_layer = 8

[node name="laser_col" type="CollisionShape2D" parent="laser_hitbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_hnrxd")
disabled = true

[node name="lifetime_timer" type="Timer" parent="."]

[connection signal="timeout" from="lifetime_timer" to="." method="_on_lifetime_timer_timeout"]
